# openapi.yaml
@@ -6,6 +6,40 @@ info:
 servers:
   - url: 'https://localhost:5000'
 paths:
+  /fix-commas:
+    post:
+      summary: Fixes comma placement in a sentence using the fine-tuned model
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                s:
+                  type: string
+                  example: 'This, is a sentence with wrong commas at least some.'
+                  description: The text with commas to fix. Commas can be removed, added, reordered at will, or left 
+                    unchanged. Other punctuation, whitespaces and so on will stay intact.
+      responses:
+        200:
+          description: Commas fixed.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  s:
+                    type: string
+                    example: 'This is a sentence with wrong commas, at least some.'
+                    description: A text with commas fixed, or unchanged if not necessary. Everything other that 
+                      commas will stay as it was originally.
+
+        400:
+          description: A required field missing from the POST request body JSON.
+
+# TODO remove duplication here
+
   /baseline/fix-commas:
     post:
       summary: Fixes comma placement in a sentence using the baseline model
